--- a/readme.htm
+++ b/readme.htm
@@ -59,6 +59,7 @@
 							<ul>
 								<li>WegGL/Canvas2D- and WebAudio-extensions.</li>
 								<li>Typed-arrays and FileReader-extension.</li>
+								<li>fullscreen-extension. (optional)</li>
 								<li>pointerLock-extension. (optional)</li>
 								<li>gamepad-extension. (optional)</li>
 								<li>The browser should support compilation of javascript-code to native-code. (JIT)</li>
@@ -77,24 +78,24 @@
 				</li>
 			</ul>
 			<ul id="features">
-				<li><span class="label">Features</span> <span class="info">(new = new in latest version 0.9.0)</span>
+				<li><span class="label">Features</span> <span class="info">(new = new in latest version 0.9.10)</span>
 					<ul>
 						<li>Models
 							<ul>
-								<li>A1000/A1000-Velvet <span class="info">(new)</span></li>
+								<li>A1000/A1000-Velvet</span></li>
 								<li>A500/A2000</li>
 								<li>A500+</li>
-								<li>A600 <span class="info">(new)</span></li>
-								<li>A1200 <span class="info">(new)</span></li>
-								<li>A3000 <span class="info">(partial, new)</span></li>
-								<li>A4000/030 <span class="info">(partial, new)</span></li>
+								<li>A600</span></li>
+								<li>A1200</span></li>
+								<li>A3000</span></li>
+								<li>A4000/030</span></li>
 							</ul>
 						</li>
 						<li>CPUs
 							<ul>
 								<li>68000</li>
-								<li>68010 <span class="info">(new)</span></li>
-								<li>68020/68030 <span class="info">(new)</span>
+								<li>68010</span></li>
+								<li>68020/68030</span>
 									<ul>
 										<li>32-bit support.</li>
 										<li>Cache support.</li>
@@ -108,20 +109,20 @@
 							<ul>
 								<li>Original-Chip-Set (OCS)
 									<ul>
-										<li>A1000-Agnus (8361 PAL, 8367 NTSC) emulation. <span class="info">(new)</span></li>
+										<li>A1000-Agnus (8361 PAL, 8367 NTSC) emulation.</span></li>
 									</ul>
 								</li>
 								<li>Enhanced-Chip-Set (ECS)
 									<ul>
-										<li>Partial (Agnus/Denise only) or full emulation. <span class="info">(new)</span></li>
+										<li>Partial (Agnus/Denise only) or full emulation.</span></li>
 									</ul>
 								</li>
-								<li>Advanced Graphics Architecture. (AGA) <span class="info">(new)</span></li>
+								<li>Advanced Graphics Architecture. (AGA)</span></li>
 								<li>PAL/NTSC-regions.</li>
 								<li>Sprites-only or full collision-detection.</li>
 								<li>Full blitter support.</li>
 								<li>Full copper support.</li>
-								<li>Full gayle support (A600/A1200) <span class="info">(new)</span>
+								<li>Full gayle support (A600/A1200)</span>
 									<ul>
 										<li>IDE</li>
 										<li>PCMCIA</li>
@@ -135,9 +136,9 @@
 								</li>
 								<li>Complex-Interlace-Adapter (CIA):
 									<ul>
-										<li>Different Time-Of-Day (TOD) sources. (Vertical Sync/Power Supply) <span class="info">(new)</span></li>
-										<li>ROM overlay emulation. (maps ROM from e.g. 0xf80000 to 0x000000 at reset) <span class="info">(new)</span></li>
-										<li>A1000 Velvet prototype CIA (6526) emulation. <span class="info">(new)</span></li>
+										<li>Different Time-Of-Day (TOD) sources. (Vertical Sync/Power Supply)</span></li>
+										<li>ROM overlay emulation. (maps ROM from e.g. 0xf80000 to 0x000000 at reset)</span></li>
+										<li>A1000 Velvet prototype CIA (6526) emulation.</span></li>
 									</ul>
 								</li>
 							</ul>
@@ -146,24 +147,24 @@
 							<ul>
 								<li>256-2048K Chip-ram. (0x000000)</li>
 								<li>Up to 1536K Slow-/Bogo-ram. (0xC00000)</li>
-								<li>Up to 64M onboard Fast-ram for A3000/A4000. <span class="info">(new)</span></li>
+								<li>Up to 64M onboard Fast-ram for A3000/A4000.</span></li>
 								<li>Up to 8M Zorro2 expansion Fast-ram. (0x200000)</li>
-								<li>Up to 8M Zorro3 Chip-ram. <span class="info">(new)</span></li>
-								<li>Up to 1024M (1G) Zorro3 expansion Fast-ram. <span class="info">(new)</span></li>
-								<li>512K Chip-/512K Bogo-ram to 1024K Chip-ram aliasing. <span class="info">(new)</span></li>
-								<li>24-/32-bit support. (32-bit memory is required for original A3000/4000-roms and emulation) <span class="info">(new)</span></li>
+								<li>Up to 8M Zorro3 Chip-ram.</span></li>
+								<li>Up to 1024M (1G) Zorro3 expansion Fast-ram.</span></li>
+								<li>512K Chip-/512K Bogo-ram to 1024K Chip-ram aliasing.</span></li>
+								<li>24-/32-bit support. (32-bit memory is required for original A3000/4000-roms and emulation)</span></li>
 							</ul>
 						</li>
 						<li>ROM
 							<ul>
 								<li>All kinds of standard and extended kickstart roms.</li>
-								<li>Support for encrypted Cloanto-roms. (Amiga Forever) <span class="info">(new)</span></li>
-								<li>Special A1000 kickstart handling. <span class="info">(new)</span></li>
-								<li>ROM-patcher, which does remove unneeded resident libraries. <span class="info">(new)</span></li>
-								<li>ROM-mirroring. (mirrors ROM to 0xA80000 or 0xE00000) <span class="info">(new)</span></li>
-								<li>ShapeShifter-support. <span class="info">(new)</span></li>
-								<li>AMAX-support. (Mac emulator) <span class="info">(new)</span></li>
-								<li>ROM-info from internal database. <span class="info">(new)</span></li>
+								<li>Support for encrypted Cloanto-roms. (Amiga Forever)</span></li>
+								<li>Special A1000 kickstart handling.</span></li>
+								<li>ROM-patcher, which does remove unneeded resident libraries.</span></li>
+								<li>ROM-mirroring. (mirrors ROM to 0xA80000 or 0xE00000)</span></li>
+								<li>ShapeShifter-support.</span></li>
+								<li>AMAX-support. (Mac emulator)</span></li>
+								<li>ROM-info from internal database.</span></li>
 							</ul>
 						</li>
 						<li>Floppy
@@ -171,20 +172,20 @@
 								<li>Supported diskimage-types
 									<ul>
 										<li>Standard ADF, read/write (*.adf)</li>
-										<li>Extended ADF (EXT1/EXT2), read/write (*.adf) <span class="info">(new)</span></li>
-										<li>PCDOS, read/write (*.img) <span class="info">(new)</span></li>
-										<li>DMS (DiskMasher), read only (*.dms) <span class="info">(new)</span></li>
-										<li>SCP (SuperCardPro), read-only (*.scp) <span class="info">(new)</span></li>
-										<li>EXE, read-only (*.exe) <span class="info">(new)</span></li>
+										<li>Extended ADF (EXT1/EXT2), read/write (*.adf)</span></li>
+										<li>PCDOS, read/write (*.img)</span></li>
+										<li>DMS (DiskMasher), read only (*.dms)</span></li>
+										<li>SCP (SuperCardPro), read-only (*.scp)</span></li>
+										<li>EXE, read-only (*.exe)</span></li>
 									</ul>
 								</li>
 								<li>Up to 4 Double-/High-density drives. (DF0-DF3)</li>
 								<li>Variable drive-speeds. (Original-Turbo).</li>
-								<li>Drives are write-protectable. <span class="info">(new)</span></li>
-								<li>Diskimage creation feature. <span class="info">(new)</span></li>
+								<li>Drives are write-protectable.</span></li>
+								<li>Diskimage creation feature.</span></li>
 							</ul>
 						</li>
-						<li>Mount <span class="info">(new)</span>
+						<li>Mount</span>
 							<ul>
 								<li>Supported hardfile-types
 									<ul>
@@ -211,11 +212,12 @@
 						<li>Video
 							<ul>
 								<li>HTML5 WegGL- or Canvas2D-rendering.</li>
-								<li>2/4 bits-per-pixel modes. <span class="info">(new)</span></li>
+								<li>2/4 bits-per-pixel modes.</span></li>
 								<li>Lores-/Hires-/Superhires-types.</li>
 								<li>Doublescan-types.</li>
 								<li>Frameskip. (renders every 2nd frame only)</li>
-								<li>Centering. <span class="info">(new)</span></li>
+								<li>Centering.</span></li>
+								<li>Fullscreen-extensions support. <span class="info">(new)</span></li>
 							</ul>
 						</li>
 						<li>Audio
@@ -223,9 +225,9 @@
 								<li>HTML5 WegAudio-processing.</li>
 								<li>Samplerates from 11025-48000 Hz.</li>
 								<li>Mono or Stereo.</li>
-								<li>Lowpass filter for A500/A1200. <span class="info">(A1200 new)</span></li>
-								<li>Variable Stereo-channel separation. <span class="info">(new)</span></li>
-								<li>Different interpolation modes (Anti, RH, Crux) <span class="info">(Anti new)</span></li>
+								<li>Lowpass filter for A500/A1200.</span></li>
+								<li>Variable Stereo-channel separation.</span></li>
+								<li>Different interpolation modes (Anti, RH, Crux)</span></li>
 							</ul>
 						</li>
 						<li>Ports
@@ -234,7 +236,8 @@
 								<li>HTML5 keyboard import.</li>
 								<li>Joystick emulation via keyboard.</li>
 								<li>Mapping of some special keys for pinball-games.</li>
-								<li>Serial-port. (output to developer-console)</li>
+								<li>Serial-port. (unfinished)</li>
+								<li>Gamepad-extensions support. <span class="info">(new)</span></li>
 							</ul>
 						</li>
 					</ul>
@@ -293,7 +296,6 @@
 			<ul id="usage">
 				<li><span class="label">Usage/Hints</span>
 					<ul>
-						<li>Press F11 for fullscreen. Most browsers support that.</li>
 						<li>If something does crash or freeze
 							<ul>
 								<li>Try another Amiga-model. A500+ for OCS/ECS and A1200 for AGA does work best.</li>
@@ -415,6 +417,11 @@
 								<li>~60.000 lines of code.</li>
 							</ul>
 						</li>
+						<li>Current version (0.9.10)
+							<ul>
+								<li>~62.000 lines of code.</li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 			</ul>
@@ -424,31 +431,12 @@
 			<ul id="history">
 				<li><span class="label">History</span>
 					<ul>
-						<li><span class="label">0.9.0 fixes and updates (2016-2019):</span>
+						<li><span class="label">0.9.10 (22.02.2019):</span>
 							<ul>
-								<li>Config
+								<li>Memory/Roms
 									<ul>
-										<li>Added hooks that get called after the emulator has been started, stopped, reseted or paused.</li>
-										<li>Fixed invalid access of the config-object. (Thanks 'db48x' for commit)</li>
-									</ul>
-								</li>
-								<li>Input
-									<ul>
-										<li>Added experimental support for the 'Gamepad API'. It is disabled by default.<br />
-										    Go to 'Config/Ports' to enable it. (Thanks to 'SpliFF' for the basic implementation)</li>
-									</ul>
-								</li>
-								<li>Video
-									<ul>
-										<li>A canvas-element can now used directly as output. See <a href="example2.htm">example2.htm</a></li>
-										<li>The mouse-pointer can now be hidden or locked via the 'pointerLock API'.<br />
-											 'pointerLock' is enabled by default, all browsers should support that. See 'Config/Video/Cursor'.</li>
-									</ul>
-								</li>
-								<li>Audio
-									<ul>
-										<li>Added mute-support over sae.mute()</li>
-										<li>Fixed wrong/multiple audio-channel selection at the ADKCON-register. (Thanks 'Vesuri' for commit)</li>
+										<li>Fixed wrong $A80000-memory-access in combination with extended-roms > 1mb. (Thanks 'Vesuri' for commit)</li>
+										<li>Updated AROS-ROMs to actual version SVN55696.</li>
 									</ul>
 								</li>
 								<li>Disk
@@ -456,9 +444,36 @@
 										<li>Fixed bug in DMS decompression with DEEP Compression (Thanks 'steffest' for commit)</li>
 									</ul>
 								</li>
-								<li>Memory
+								<li>Video
 									<ul>
-										<li>Fixed wrong $A80000-memory-access in combination with extended-roms > 1mb. (Thanks 'Vesuri' for commit)</li>
+										<li>Added support for the 'fullscreen-API'. There is a new api-function called sae.screen() and the new hook-function<br />
+											 config.hooks.event.screened(). All browsers should support that. See the examples.</li>
+										<li>The mouse-pointer can now be hidden or locked via the 'pointerLock-API'.<br />
+											 The feature is enabled by default. All browsers should support that. See 'Config/Video/Cursor'.</li>
+										<li>A canvas-element can now used directly as output. See <a href="example2.htm">example2.htm</a></li>
+									</ul>
+								</li>
+								<li>Audio
+									<ul>
+										<li>Fixed wrong/multiple audio-channel selection at the ADKCON-register. (Thanks 'Vesuri' for commit)</li>
+										<li>Added mute-support over sae.mute()</li>
+									</ul>
+								</li>
+								<li>Ports
+									<ul>
+										<li>Added experimental support for the 'Gamepad API'. It is disabled by default.<br />
+										    Go to 'Config/Ports' to enable it. (Thanks to 'SpliFF' for the basic implementation)</li>
+										<li>Better handling of buttons and movement. No input-events get lost and also the 3rd mouse-button is now dectected.</li>
+										<li>Added emualtion of various protection-dongles.</li>
+										<li>Finished support for direct-serial communication and added hooks. See the examples.</li>
+										<li>Added support for direct-parallel communication and hooks. Also see the examples.</li>
+										<li>Removed the 'Enable Serial'-checkbox from 'Config/Ports'. Does not made much sense without hooks.</li>
+									</ul>
+								</li>
+								<li>Config
+									<ul>
+										<li>Added hooks that get called after the emulator has been started, stopped, reseted, paused or fullscreened.</li>
+										<li>Fixed invalid access of the config-object. (Thanks 'db48x' for commit)</li>
 									</ul>
 								</li>
 								<li>Common
@@ -466,6 +481,7 @@
 										<li>Removed Google-Analytics. Sorry for the molestation.</li>
 										<li>Added an error if a ZIP-file get detected. Compressed files are not yet supported.</li>
 										<li>Fixed Object.prototype.clone() to a custom function to be compatible with 'jQuery'. (Thanks 'Vesuri' for commit)</li>
+										<li>The patch-version-number has now a 2nd digit and starting at 10.</li>
 									</ul>
 								</li>
 							</ul>
