--- a/readme.htm
+++ b/readme.htm
@@ -417,7 +417,7 @@
 								<li>~60.000 lines of code.</li>
 							</ul>
 						</li>
-						<li>Current version (0.9.10)
+						<li>Current version (0.9.11)
 							<ul>
 								<li>~62.000 lines of code.</li>
 							</ul>
@@ -431,6 +431,15 @@
 			<ul id="history">
 				<li><span class="label">History</span>
 					<ul>
+						<li><span class="label">0.9.11 (11.05.2019):</span>
+							<ul>
+								<li>Disk
+									<ul>
+										<li>Fixed wrong bitmap-usage calculation at floppy_get_rootblock() in combination with HD-floopies. (Thanks 'dirkwhoffmann' for commit)</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
 						<li><span class="label">0.9.10 (22.02.2019):</span>
 							<ul>
 								<li>Memory/Roms
