--- a/readme.htm
+++ b/readme.htm
@@ -236,7 +236,7 @@
 								<li>HTML5 keyboard import.</li>
 								<li>Joystick emulation via keyboard.</li>
 								<li>Mapping of some special keys for pinball-games.</li>
-								<li>Serial-port. (unfinished)</li>
+								<li>Serial- and parallel-port. <span class="info">(new)</span></li>
 								<li>Gamepad-extensions support. <span class="info">(new)</span></li>
 							</ul>
 						</li>
@@ -257,13 +257,13 @@
 								<li>68020
 									<ul>
 										<li>CALLM/RTM is not implemented.</li>
-										<li>Execution-times of instruction and interrupts are not fully correct.</li>
+										<li>Execution-time of some instructions and interrupts are not fully correct.</li>
 									</ul>
 								</li>
 								<li>68030
 									<ul>
 										<li>MMU is fake.</li>
-										<li>Execution-times of instruction and interrupts are not fully correct.</li>
+										<li>Execution-time of some instructions and interrupts are not fully correct.</li>
 									</ul>
 								</li>
 								<li>Exceptions 2 and 3 are not fully implemented.</li>
@@ -299,7 +299,7 @@
 						<li>If something does crash or freeze
 							<ul>
 								<li>Try another Amiga-model. A500+ for OCS/ECS and A1200 for AGA does work best.</li>
-								<li>Use the right rom. Selecting a wrong rom may freeze the emulation. If possible use original kickstart-roms.</li>
+								<li>Use the right rom. Selecting a wrong rom may freeze the emulation. If possible, use original kickstart-roms.</li>
 								<li>If you are using original A3000/4000 kickstart-roms, make sure to enable &quot;32bit address-space&quot; in the CPU-page.</li>
 								<li>If you are using the AROS kickstart-replacement, you should also give some fast-ram.</li>
 								<li>Try to enable &quot;Compatible&quot; in the CPU-page.</li>
@@ -417,7 +417,7 @@
 								<li>~60.000 lines of code.</li>
 							</ul>
 						</li>
-						<li>Current version (0.9.11)
+						<li>Current version (0.9.12)
 							<ul>
 								<li>~62.000 lines of code.</li>
 							</ul>
