--- a/readme.htm
+++ b/readme.htm
@@ -431,6 +431,25 @@
 			<ul id="history">
 				<li><span class="label">History</span>
 					<ul>
+						<li><span class="label">0.9.13 (11.11.2021):</span>
+							<ul>
+								<li>Playfield
+									<ul>
+										<li>Fixed bug in CLXDAT in combination with full-collision-detection. (Thanks 'dirkwhoffmann' for info)</li>
+									</ul>
+								</li>
+								<li>Input
+									<ul>
+										<li>Fixed Semi-Colon-Key under Firefox. (Thanks 'goldnchild' for info)</li>
+									</ul>
+								</li>
+								<li>Common
+									<ul>
+										<li>Enabled HTTPS. It should fix the Gamepad-API secure-context problem. (Thanks 'goldnchild' for info)</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
 						<li><span class="label">0.9.12 (23.06.2019):</span>
 							<ul>
 								<li>Memory
