--- a/index.htm
+++ b/index.htm
@@ -1515,7 +1515,7 @@
 														<option value="3">WASD</option>
 													</select>
 													Fire 1
-													<select id="cfg_ports_0_fire_1" size="1">
+													<!--<select id="cfg_ports_0_fire_1" size="1">
 														<option value="0">None</option>
 														<option value="16">Shift</option>
 														<option value="17">Ctrl</option>
@@ -1539,9 +1539,36 @@
 														<option value="145">Scroll lock</option>
 														<option value="49">1</option>
 														<option value="50">2</option>
+													</select>-->
+													<select id="cfg_ports_0_fire_1" size="1">
+														<option value="None">None</option>
+														<option value="ShiftLeft">Left Shift</option>
+														<option value="ShiftRight">Right Shift</option>
+														<option value="ControlLeft">Left Ctrl</option>
+														<option value="ControlRight">Right Ctrl</option>
+														<option value="Enter">Enter</option>
+														<option value="Space">Space</option>
+														<option value="Backspace">Backspace</option>
+														<option value="Numpad0">Numpad 0</option>
+														<option value="NumpadMultiply">Numpad *</option>
+														<option value="NumpadAdd">Numpad +</option>
+														<option value="NumpadSubtract">Numpad -</option>
+														<option value="NumpadDecimal">Numpad .</option>
+														<option value="NumpadDivide">Numpad /</option>
+														<option value="Delete">Delete</option>
+														<option value="Insert">Insert</option>
+														<option value="PageDown">Page down</option>
+														<option value="PageUp">Page up</option>
+														<option value="End">End</option>
+														<option value="Home">Home</option>
+														<option value="Pause">Pause</option>
+														<option value="NumLock">Num lock</option>
+														<option value="ScrollLock">Scroll lock</option>
+														<option value="Digit1">1</option>
+														<option value="Digit2">2</option>
 													</select>
 													Fire 2
-													<select id="cfg_ports_0_fire_2" size="1">
+													<!--<select id="cfg_ports_0_fire_2" size="1">
 														<option value="0">None</option>
 														<option value="16">Shift</option>
 														<option value="17">Ctrl</option>
@@ -1565,6 +1592,33 @@
 														<option value="145">Scroll lock</option>
 														<option value="49">1</option>
 														<option value="50">2</option>
+													</select>-->
+													<select id="cfg_ports_0_fire_2" size="1">
+														<option value="None">None</option>
+														<option value="ShiftLeft">Left Shift</option>
+														<option value="ShiftRight">Right Shift</option>
+														<option value="ControlLeft">Left Ctrl</option>
+														<option value="ControlRight">Right Ctrl</option>
+														<option value="Enter">Enter</option>
+														<option value="Space">Space</option>
+														<option value="Backspace">Backspace</option>
+														<option value="Numpad0">Numpad 0</option>
+														<option value="NumpadMultiply">Numpad *</option>
+														<option value="NumpadAdd">Numpad +</option>
+														<option value="NumpadSubtract">Numpad -</option>
+														<option value="NumpadDecimal">Numpad .</option>
+														<option value="NumpadDivide">Numpad /</option>
+														<option value="Delete">Delete</option>
+														<option value="Insert">Insert</option>
+														<option value="PageDown">Page down</option>
+														<option value="PageUp">Page up</option>
+														<option value="End">End</option>
+														<option value="Home">Home</option>
+														<option value="Pause">Pause</option>
+														<option value="NumLock">Num lock</option>
+														<option value="ScrollLock">Scroll lock</option>
+														<option value="Digit1">1</option>
+														<option value="Digit2">2</option>
 													</select>
 												</div>
 												<div id="cfg_ports_0_joy_grp">
@@ -1595,7 +1649,7 @@
 														<option value="3">WASD</option>
 													</select>
 													Fire 1
-													<select id="cfg_ports_1_fire_1" size="1">
+													<!--<select id="cfg_ports_1_fire_1" size="1">
 														<option value="0">None</option>
 														<option value="16">Shift</option>
 														<option value="17">Ctrl</option>
@@ -1619,9 +1673,36 @@
 														<option value="145">Scroll lock</option>
 														<option value="49">1</option>
 														<option value="50">2</option>
+													</select>-->
+													<select id="cfg_ports_1_fire_1" size="1">
+														<option value="None">None</option>
+														<option value="ShiftLeft">Left Shift</option>
+														<option value="ShiftRight">Right Shift</option>
+														<option value="ControlLeft">Left Ctrl</option>
+														<option value="ControlRight">Right Ctrl</option>
+														<option value="Enter">Enter</option>
+														<option value="Space">Space</option>
+														<option value="Backspace">Backspace</option>
+														<option value="Numpad0">Numpad 0</option>
+														<option value="NumpadMultiply">Numpad *</option>
+														<option value="NumpadAdd">Numpad +</option>
+														<option value="NumpadSubtract">Numpad -</option>
+														<option value="NumpadDecimal">Numpad .</option>
+														<option value="NumpadDivide">Numpad /</option>
+														<option value="Delete">Delete</option>
+														<option value="Insert">Insert</option>
+														<option value="PageDown">Page down</option>
+														<option value="PageUp">Page up</option>
+														<option value="End">End</option>
+														<option value="Home">Home</option>
+														<option value="Pause">Pause</option>
+														<option value="NumLock">Num lock</option>
+														<option value="ScrollLock">Scroll lock</option>
+														<option value="Digit1">1</option>
+														<option value="Digit2">2</option>
 													</select>
 													Fire 2
-													<select id="cfg_ports_1_fire_2" size="1">
+													<!--<select id="cfg_ports_1_fire_2" size="1">
 														<option value="0">None</option>
 														<option value="16">Shift</option>
 														<option value="17">Ctrl</option>
@@ -1645,6 +1726,33 @@
 														<option value="145">Scroll lock</option>
 														<option value="49">1</option>
 														<option value="50">2</option>
+													</select>-->
+													<select id="cfg_ports_1_fire_2" size="1">
+														<option value="None">None</option>
+														<option value="ShiftLeft">Left Shift</option>
+														<option value="ShiftRight">Right Shift</option>
+														<option value="ControlLeft">Left Ctrl</option>
+														<option value="ControlRight">Right Ctrl</option>
+														<option value="Enter">Enter</option>
+														<option value="Space">Space</option>
+														<option value="Backspace">Backspace</option>
+														<option value="Numpad0">Numpad 0</option>
+														<option value="NumpadMultiply">Numpad *</option>
+														<option value="NumpadAdd">Numpad +</option>
+														<option value="NumpadSubtract">Numpad -</option>
+														<option value="NumpadDecimal">Numpad .</option>
+														<option value="NumpadDivide">Numpad /</option>
+														<option value="Delete">Delete</option>
+														<option value="Insert">Insert</option>
+														<option value="PageDown">Page down</option>
+														<option value="PageUp">Page up</option>
+														<option value="End">End</option>
+														<option value="Home">Home</option>
+														<option value="Pause">Pause</option>
+														<option value="NumLock">Num lock</option>
+														<option value="ScrollLock">Scroll lock</option>
+														<option value="Digit1">1</option>
+														<option value="Digit2">2</option>
 													</select>
 												</div>
 												<div id="cfg_ports_1_joy_grp">
