--- a/readme.htm
+++ b/readme.htm
@@ -78,24 +78,24 @@
 				</li>
 			</ul>
 			<ul id="features">
-				<li><span class="label">Features</span> <span class="info">(new = new in latest version 0.9.10)</span>
+				<li><span class="label">Features</span> <span class="info">(new = new in version 0.9.10)</span>
 					<ul>
 						<li>Models
 							<ul>
-								<li>A1000/A1000-Velvet</span></li>
+								<li>A1000/A1000-Velvet</li>
 								<li>A500/A2000</li>
 								<li>A500+</li>
-								<li>A600</span></li>
-								<li>A1200</span></li>
-								<li>A3000</span></li>
-								<li>A4000/030</span></li>
+								<li>A600</li>
+								<li>A1200</li>
+								<li>A3000</li>
+								<li>A4000/030</li>
 							</ul>
 						</li>
 						<li>CPUs
 							<ul>
 								<li>68000</li>
-								<li>68010</span></li>
-								<li>68020/68030</span>
+								<li>68010</li>
+								<li>68020/68030
 									<ul>
 										<li>32-bit support.</li>
 										<li>Cache support.</li>
@@ -109,20 +109,20 @@
 							<ul>
 								<li>Original-Chip-Set (OCS)
 									<ul>
-										<li>A1000-Agnus (8361 PAL, 8367 NTSC) emulation.</span></li>
+										<li>A1000-Agnus (8361 PAL, 8367 NTSC) emulation.</li>
 									</ul>
 								</li>
 								<li>Enhanced-Chip-Set (ECS)
 									<ul>
-										<li>Partial (Agnus/Denise only) or full emulation.</span></li>
+										<li>Partial (Agnus/Denise only) or full emulation.</li>
 									</ul>
 								</li>
-								<li>Advanced Graphics Architecture. (AGA)</span></li>
+								<li>Advanced Graphics Architecture. (AGA)</li>
 								<li>PAL/NTSC-regions.</li>
 								<li>Sprites-only or full collision-detection.</li>
 								<li>Full blitter support.</li>
 								<li>Full copper support.</li>
-								<li>Full gayle support (A600/A1200)</span>
+								<li>Full gayle support (A600/A1200)
 									<ul>
 										<li>IDE</li>
 										<li>PCMCIA</li>
@@ -136,9 +136,9 @@
 								</li>
 								<li>Complex-Interlace-Adapter (CIA):
 									<ul>
-										<li>Different Time-Of-Day (TOD) sources. (Vertical Sync/Power Supply)</span></li>
-										<li>ROM overlay emulation. (maps ROM from e.g. 0xf80000 to 0x000000 at reset)</span></li>
-										<li>A1000 Velvet prototype CIA (6526) emulation.</span></li>
+										<li>Different Time-Of-Day (TOD) sources. (Vertical Sync/Power Supply)</li>
+										<li>ROM overlay emulation. (maps ROM from e.g. 0xf80000 to 0x000000 at reset)</li>
+										<li>A1000 Velvet prototype CIA (6526) emulation.</li>
 									</ul>
 								</li>
 							</ul>
@@ -147,24 +147,24 @@
 							<ul>
 								<li>256-2048K Chip-ram. (0x000000)</li>
 								<li>Up to 1536K Slow-/Bogo-ram. (0xC00000)</li>
-								<li>Up to 64M onboard Fast-ram for A3000/A4000.</span></li>
+								<li>Up to 64M onboard Fast-ram for A3000/A4000.</li>
 								<li>Up to 8M Zorro2 expansion Fast-ram. (0x200000)</li>
-								<li>Up to 8M Zorro3 Chip-ram.</span></li>
-								<li>Up to 1024M (1G) Zorro3 expansion Fast-ram.</span></li>
-								<li>512K Chip-/512K Bogo-ram to 1024K Chip-ram aliasing.</span></li>
-								<li>24-/32-bit support. (32-bit memory is required for original A3000/4000-roms and emulation)</span></li>
+								<li>Up to 8M Zorro3 Chip-ram.</li>
+								<li>Up to 1024M (1G) Zorro3 expansion Fast-ram.</li>
+								<li>512K Chip-/512K Bogo-ram to 1024K Chip-ram aliasing.</li>
+								<li>24-/32-bit support. (32-bit memory is required for original A3000/4000-roms and emulation)</li>
 							</ul>
 						</li>
 						<li>ROM
 							<ul>
 								<li>All kinds of standard and extended kickstart roms.</li>
-								<li>Support for encrypted Cloanto-roms. (Amiga Forever)</span></li>
-								<li>Special A1000 kickstart handling.</span></li>
-								<li>ROM-patcher, which does remove unneeded resident libraries.</span></li>
-								<li>ROM-mirroring. (mirrors ROM to 0xA80000 or 0xE00000)</span></li>
-								<li>ShapeShifter-support.</span></li>
-								<li>AMAX-support. (Mac emulator)</span></li>
-								<li>ROM-info from internal database.</span></li>
+								<li>Support for encrypted Cloanto-roms. (Amiga Forever)</li>
+								<li>Special A1000 kickstart handling.</li>
+								<li>ROM-patcher, which does remove unneeded resident libraries.</li>
+								<li>ROM-mirroring. (mirrors ROM to 0xA80000 or 0xE00000)</li>
+								<li>ShapeShifter-support.</li>
+								<li>AMAX-support. (Mac emulator)</li>
+								<li>ROM-info from internal database.</li>
 							</ul>
 						</li>
 						<li>Floppy
@@ -172,20 +172,20 @@
 								<li>Supported diskimage-types
 									<ul>
 										<li>Standard ADF, read/write (*.adf)</li>
-										<li>Extended ADF (EXT1/EXT2), read/write (*.adf)</span></li>
-										<li>PCDOS, read/write (*.img)</span></li>
-										<li>DMS (DiskMasher), read only (*.dms)</span></li>
-										<li>SCP (SuperCardPro), read-only (*.scp)</span></li>
-										<li>EXE, read-only (*.exe)</span></li>
+										<li>Extended ADF (EXT1/EXT2), read/write (*.adf)</li>
+										<li>PCDOS, read/write (*.img)</li>
+										<li>DMS (DiskMasher), read only (*.dms)</li>
+										<li>SCP (SuperCardPro), read-only (*.scp)</li>
+										<li>EXE, read-only (*.exe)</li>
 									</ul>
 								</li>
 								<li>Up to 4 Double-/High-density drives. (DF0-DF3)</li>
 								<li>Variable drive-speeds. (Original-Turbo).</li>
-								<li>Drives are write-protectable.</span></li>
-								<li>Diskimage creation feature.</span></li>
+								<li>Drives are write-protectable.</li>
+								<li>Diskimage creation feature.</li>
 							</ul>
 						</li>
-						<li>Mount</span>
+						<li>Mount
 							<ul>
 								<li>Supported hardfile-types
 									<ul>
@@ -212,11 +212,11 @@
 						<li>Video
 							<ul>
 								<li>HTML5 WegGL- or Canvas2D-rendering.</li>
-								<li>2/4 bits-per-pixel modes.</span></li>
+								<li>2/4 bits-per-pixel modes.</li>
 								<li>Lores-/Hires-/Superhires-types.</li>
 								<li>Doublescan-types.</li>
 								<li>Frameskip. (renders every 2nd frame only)</li>
-								<li>Centering.</span></li>
+								<li>Centering.</li>
 								<li>Fullscreen-extensions support. <span class="info">(new)</span></li>
 							</ul>
 						</li>
@@ -225,9 +225,9 @@
 								<li>HTML5 WegAudio-processing.</li>
 								<li>Samplerates from 11025-48000 Hz.</li>
 								<li>Mono or Stereo.</li>
-								<li>Lowpass filter for A500/A1200.</span></li>
-								<li>Variable Stereo-channel separation.</span></li>
-								<li>Different interpolation modes (Anti, RH, Crux)</span></li>
+								<li>Lowpass filter for A500/A1200.</li>
+								<li>Variable Stereo-channel separation.</li>
+								<li>Different interpolation modes (Anti, RH, Crux)</li>
 							</ul>
 						</li>
 						<li>Ports
@@ -285,6 +285,13 @@
 							<ul>
 								<li>No onboard-SCSI for the A3000/4000.</li>
 								<li>No support for compressed hardfile-images like HDZ.</li>
+							</ul>
+						</li>
+						<li>Input
+							<ul>
+								<li>The 'Amiga-Keys' (left from Alt and right from AltGr) do no work, because they're handled outside of the scope from the Browser.</li>
+								<li>[# '] can't be typed on a German-standard-keyboard, because there's a physical key missing. (left from Backspace)</li>
+								<li>The AltGr-Key (if existing) is mapped as Ctrl+Alt under Windows.</li>
 							</ul>
 						</li>
 					</ul>
@@ -417,7 +424,7 @@
 								<li>~60.000 lines of code.</li>
 							</ul>
 						</li>
-						<li>Current version (0.9.12)
+						<li>Current version (0.9.xx)
 							<ul>
 								<li>~62.000 lines of code.</li>
 							</ul>
@@ -441,6 +448,8 @@
 								<li>Input
 									<ul>
 										<li>Fixed Semi-Colon-Key under Firefox. (Thanks 'goldnchild' for info)</li>
+										<li>Switched from event.keyCode to event.code for better compatibility throughout different keyboards. (Thanks 'steffest' for info)<br>
+										<span class="info">Note: The German-standard-keyboard does miss the key [\ |] (left from Backspace). This key will be mapped to [# '] and therefor [# '] can't be typed.</span></li>
 									</ul>
 								</li>
 								<li>Common
@@ -450,6 +459,7 @@
 								</li>
 							</ul>
 						</li>
+						<li style="list-style-type:none"><br/></li>
 						<li><span class="label">0.9.12 (23.06.2019):</span>
 							<ul>
 								<li>Memory
@@ -459,6 +469,7 @@
 								</li>
 							</ul>
 						</li>
+						<li style="list-style-type:none"><br/></li>
 						<li><span class="label">0.9.11 (11.05.2019):</span>
 							<ul>
 								<li>Disk
@@ -468,6 +479,7 @@
 								</li>
 							</ul>
 						</li>
+						<li style="list-style-type:none"><br/></li>
 						<li><span class="label">0.9.10 (22.02.2019):</span>
 							<ul>
 								<li>Memory/Roms
